@@ -101,17 +101,28 @@
                     </to>
                     <container>
                         <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
-                        <jvmFlags>
-                            <!-- global java option -->
+                        <!--<jvmFlags>
                             <jvmFlag>-server</jvmFlag>
                             <jvmFlag>-Dfile.encoding=UTF-8</jvmFlag>
+                            <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
                             <jvmFlag>-verbose:gc</jvmFlag>
                             <jvmFlag>-XX:+PrintGCDetails</jvmFlag>
                             <jvmFlag>-XX:+PrintGCDateStamps</jvmFlag>
                             <jvmFlag>-XX:+PrintGCTimeStamps</jvmFlag>
                             <jvmFlag>-Xloggc:/var/log/gc.log</jvmFlag>
-                            <jvmFlag>-Djava.security.egd=file:/dev/./urandom</jvmFlag>
-                        </jvmFlags>
+                        </jvmFlags>-->
+                        <entrypoint>
+                            <arg>/bin/sh</arg>
+                            <arg>-c</arg>
+                            <arg>
+                                exec java $JAVA_OPTS \
+                                -server -Dfile.encoding=UTF-8 -Djava.security.egd=file:/dev/./urandom \
+                                -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps \
+                                -Xloggc:/var/log/gc.log \
+                                -cp $( cat /app/jib-classpath-file ) \
+                                $( cat /app/jib-main-class-file )
+                            </arg>
+                        </entrypoint>
                     </container>
                 </configuration>
             </plugin>
